# gst-plugins-imsdk

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
gst-plugin-base/: CMakeLists.txt
gst-plugin-base/gst/: common.pc.in
gst-plugin-camimgreproc/: CMakeLists.txt  camera-image-reprocess-context.cc  camera-image-reprocess-context.h  camera-image-reprocess-pad.c  camera-image-reprocess-pad.h  camera-image-reprocess.c  camera-image-reprocess.h  config.h.in
gst-plugin-camreproc/: CMakeLists.txt  camera-reprocess-context.cc  camera-reprocess-context.h  camera-reprocess.c  camera-reprocess.h  config.h.in
gst-plugin-codec2/: CMakeLists.txt  config.h.in
gst-plugin-codec2/c2-engine/: CMakeLists.txt  c2-component.cc  c2-component.h  c2-config.cc  c2-config.h  c2-engine-params.cc  c2-engine-params.h  c2-engine-utils.cc  c2-engine-utils.h  c2-engine.cc  c2-engine.h  c2-wrapper.cc  c2-wrapper.h  common.h
gst-plugin-codec2/c2adec/: CMakeLists.txt  c2adec.c  c2adec.h
gst-plugin-codec2/c2aenc/: CMakeLists.txt  c2aenc.c  c2aenc.h
gst-plugin-codec2/c2vdec/: CMakeLists.txt  c2vdec.c  c2vdec.h  gstc2vdec.cc  gstc2vdec.h
gst-plugin-codec2/c2venc/: CMakeLists.txt  c2venc.c  c2venc.cc  c2venc.h
gst-plugin-cv-imgpyramid/: CMakeLists.txt  config.h.in  cvp-imgpyramid-engine.cc  eva-imgpyramid-engine.cc  imagepyramid.c  imagepyramid.h  imagepyramidpads.c  imagepyramidpads.h  imgpyramid-engine.h
gst-plugin-cv-optclflow/: CMakeLists.txt  config.h.in  cvp-opticalflow-engine.cc  cvp-opticalflow-engine.h  eva-opticalflow-engine.cc  opticalflow-engine.h  opticalflow.c  opticalflow.h
gst-plugin-dfs/: CMakeLists.txt  config.h.in  dfs-engine.cc  dfs-engine.h  dfs.c  dfs.h
gst-plugin-drmdecryptor/: CMakeLists.txt  config.h.in  drmdecryptor-engine.cc  drmdecryptor-engine.h  drmdecryptor.c  drmdecryptor.cc  drmdecryptor.h
gst-plugin-examples/: CMakeLists.txt
gst-plugin-examples/gst-activate-deactivate-streams-runtime/: CMakeLists.txt  main.c
gst-plugin-examples/gst-add-remove-streams-runtime/: CMakeLists.txt  main.c
gst-plugin-examples/gst-add-streams-as-bundle-example/: CMakeLists.txt  main.c
gst-plugin-examples/gst-appsink/: main.c
gst-plugin-examples/gst-appsink-raw-plus-yuv/: CMakeLists.txt  main.c
gst-plugin-examples/gst-buffering-encoding-mode-switch/: CMakeLists.txt  main.cc
gst-plugin-examples/gst-camera-burst-intervalcapture-example/: CMakeLists.txt  main.cc
gst-plugin-examples/gst-camera-capture-example/: CMakeLists.txt  main.cc
gst-plugin-examples/gst-camera-hotplug-example/: CMakeLists.txt  main.c
gst-plugin-examples/gst-camera-metadata-example/: CMakeLists.txt  main.cc
gst-plugin-examples/gst-camera-prebuffered-data-app/: CMakeLists.txt  main.cc
gst-plugin-examples/gst-camera-standby-example/: CMakeLists.txt  main.cc
gst-plugin-examples/gst-camera-switch-appsrc-example/: CMakeLists.txt  main.cc
gst-plugin-examples/gst-camera-switch-example/: CMakeLists.txt  main.cc
gst-plugin-examples/gst-camera-via-rtsp-example/: CMakeLists.txt  main.c
gst-plugin-examples/gst-concurrent-cameras-example/: CMakeLists.txt  main.c
gst-plugin-examples/gst-depth-assist-autofocus-example/: CMakeLists.txt  main.cc
gst-plugin-mlmetaparser/: CMakeLists.txt  config.h.in  mlmetaparser.c  mlmetaparser.h  parsermodule.c  parsermodule.h
gst-plugin-mlonnx/: CMakeLists.txt  config.h.in  ml-onnx-engine.cc  ml-onnx-engine.h  mlonnx.c  mlonnx.h
gst-plugin-mltflite/: CMakeLists.txt  config.h.in  ml-tflite-engine-c-api.cc  ml-tflite-engine.cc  ml-tflite-engine.h  mltflite.c  mltflite.h
gst-plugin-mltools/: CMakeLists.txt
gst-plugin-mlvsuperresolution/: CMakeLists.txt  config.h.in  mlvsuperresolution.c  mlvsuperresolution.h
gst-plugin-msgbroker/: CMakeLists.txt  config.h.in
gst-plugin-objtracker/: CMakeLists.txt  config.h.in  objtracker-algo.cc  objtracker-algo.h  objtracker-data.h  objtracker.c  objtracker.cc  objtracker.h
gst-plugin-offlinecamera/: CMakeLists.txt  offline-camera-context.cc  offline-camera-context.h  offline-camera.c  offline-camera.h
gst-plugin-overlay/: CMakeLists.txt  config.h.in  gstoverlay.cc  gstoverlay.h
gst-plugin-qmmfsrc/: CMakeLists.txt  camera_source.c  camera_source.h  camera_source_context.cc  camera_source_context.h  camera_source_image_pad.c  camera_source_image_pad.h  camera_source_utils.cc  camera_source_utils.h  camera_source_video_pad.c  camera_source_video_pad.h  config.h.in  qmmf_source.c  qmmf_source.h  qmmf_source_context.cc  qmmf_source_context.h  qmmf_source_image_pad.c  qmmf_source_image_pad.h  qmmf_source_utils.c  qmmf_source_utils.cc  qmmf_source_utils.h  qmmf_source_video_pad.c  qmmf_source_video_pad.h
gst-plugin-smartvencbin/: CMakeLists.txt  config.h.in  smart-codec-engine.cc  smart-codec-engine.h  vencbin.c  vencbin.h
gst-python-examples/: CMakeLists.txt  gst-ai-audio-inference.py  gst-ai-audio-postprocess.py  gst-ai-audio-preprocess.py  gst-ai-object-detection.py  gst-ai-video-classification-and-detection.py  gst-ai-video-classification.py  gst-ai-video-daisychain-pose-estimation.py  gst-ai-video-detection.py  gst-ai-video-inference.py  gst-ai-video-postprocess.py  gst-ai-video-preprocess-crop.py  gst-ai-video-preprocess.py  gst-ai-video-segmentation.py  gst-camera-detect-display.py  gst-camera-detection-encode.py  gst-camera-encode.py  gst-camera-opencv-resize.py  gst-camera-rotate-downscale-file.py  gst-camera-three-stream-encode-file-detection-display-classification-rtsp.py  gst-camera-two-stream-detection-and-classification-side-by-side.py  gst-camera-two-stream-encode-file-detection-display.py  gst-concurrent-videoplay-composition.py  gst-daisychain-detection-pose.py  gst-decode-detect-display.py  gst-filesrc-2detection-classification-segmentation-side-by-side.py  gst-gui-launcher-app.py  gst-jpg-image-decode.py  gst-multi-camera-stream-example.py  gst-opencv-transform.py  gst-parallel-inference.py  gst-rtspsrc-detection-display.py  gst-video-source.py  gst_utils.py
gst-sample-apps/: CMakeLists.txt
gst-test-framework/: CMakeLists.txt  main.c
gst-umd-daemon/: CMakeLists.txt  main.c  uvc.config
(+852 files in other folders)
